JS/Hard/Part-3/1-tugas v2

--- a/JAVASCRIPT Dasar/Hard/Part-3/1-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-3/1-tugas/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			#calculator {
+				font-family: Arial, sans-serif;
+				margin: 20px;
+			}
+			input {
+				margin: 5px;
+			}
+		</style>
+	</head>
+	<body>
+		<div id="calculator">
+			<input type="number" id="num1" placeholder="Number 1" />
+			<input type="number" id="num2" placeholder="Number 2" />
+			<button id="calculate">Calculate</button>
+			<p id="result">Result: </p>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
