--- a/JAVASCRIPT Dasar/Hard/Part-3/2-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-3/2-tugas/index.html
@@ -9,27 +9,25 @@
 		<link rel="stylesheet" href="css/reset.css" />
 		<link rel="stylesheet" href="css/main.css" />
 		<style>
-			body {
+			#calculator {
 				font-family: Arial, sans-serif;
-				text-align: center;
-				margin-top: 20px;
+				margin: 20px;
 			}
-			input,
-			button {
-				padding: 10px;
+			input {
 				margin: 5px;
-			}
-			p {
-				font-weight: bold;
 			}
 		</style>
 	</head>
 	<body>
-		<h2>Tebak Angka (1-10) - nyawa kamu: <span id="lives">3</span></h2>
-		<input type="number" id="guessInput" placeholder="Masukkan angka" />
-		<button id="checkBtn">Cek</button>
-		<button id="resetBtn">Reset</button>
-		<p id="result"></p>
+		<div id="calculator">
+			<input type="number" id="num1" placeholder="Number 1" />
+			<input type="number" id="num2" placeholder="Number 2" />
+			<button id="tambah">Tambah</button>
+			<button id="kurang">kurang</button>
+			<button id="kali">kali</button>
+			<button id="bagi">bagi</button>
+			<p id="result">Result: </p>
+		</div>
 		<script src="js/main.js"></script>
 	</body>
 </html>
