--- a/JAVASCRIPT Dasar/Hard/Part-3/3-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-3/3-tugas/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			#todo-app {
+				font-family: Arial, sans-serif;
+				margin: 20px;
+			}
+			ul {
+				list-style-type: none;
+				padding: 0;
+			}
+			li {
+				margin: 5px 0;
+				cursor: pointer;
+			}
+		</style>
+	</head>
+	<body>
+		<div id="todo-app">
+			<input type="text" id="todo-input" placeholder="Enter a task" />
+			<button id="add-task">Add Task</button>
+			<ul id="todo-list"></ul>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
