--- a/JAVASCRIPT Dasar/Hard/Part-3/4-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-3/4-tugas/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			#counter {
+				font-family: Arial, sans-serif;
+				text-align: center;
+				margin-top: 50px;
+				user-select: none;
+			}
+			button {
+				margin: 5px;
+				font-size: 20px;
+				user-select: none;
+				cursor: pointer;
+			}
+			span {
+				user-select: none;
+				font-size: 24px;
+				margin: 0 10px;
+			}
+		</style>
+	</head>
+	<body>
+		<div id="counter">
+			<button id="decrement">-</button>
+			<span id="count">0</span>
+			<button id="increment">+</button>
+			<button id="reset">reset</button>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
