--- a/JAVASCRIPT Dasar/Hard/Part-3/5-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-3/5-tugas/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			div {
+				text-align: center;
+				margin-top: 50px;
+			}
+			button {
+				font-size: 20px;
+				padding: 10px 20px;
+			}
+			p {
+				font-size: 18px;
+				margin-top: 20px;
+			}
+		</style>
+	</head>
+	<body>
+		<div>
+			<button id="change-color">Change Background</button>
+			<p id="current-color">Current Color: #ffffff</p>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
