JS/Hard/Part-3/7-tugas v1

--- a/JAVASCRIPT Dasar/Hard/Part-3/7-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-3/7-tugas/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			body {
+				font-family: Arial, sans-serif;
+				text-align: center;
+			}
+		</style>
+	</head>
+	<body>
+		<input type="text" id="textInput" />
+		<button id="reverseButton">Balikkan Teks</button>
+		<div id="result"></div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
