--- a/JAVASCRIPT Dasar/Hard/Part-3/8-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-3/8-tugas/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			body {
+				font-family: Arial, sans-serif;
+				text-align: center;
+				margin-top: 50px;
+			}
+			input {
+				padding: 10px;
+				font-size: 1rem;
+				width: 80%;
+			}
+			p {
+				font-size: 1.2rem;
+			}
+		</style>
+	</head>
+	<body>
+		<input type="text" id="textInput" placeholder="Ketik sesuatu..." />
+		<p>Jumlah karakter: <span id="charCount">0</span></p>
+		<script src="js/main.js"></script>
+	</body>
 </html>
