JS/Hard/Part-3/9-tugas v3

--- a/JAVASCRIPT Dasar/Hard/Part-3/9-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-3/9-tugas/index.html
@@ -26,6 +26,7 @@
 		</style>
 	</head>
 	<body>
+		<p><em>Fitur: Abaikan spasi dan karakter khusus. Mendukung pemeriksaan pada kalimat/paragraf.</em></p>
 		<input type="text" id="palindromeInput" placeholder="Masukkan kata..." />
 		<button id="checkPalindrome">Periksa</button>
 		<p id="result"></p>
