--- a/JAVASCRIPT Dasar/Hard/Part-3/12-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-3/12-tugas/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			body {
+				font-family: Arial, sans-serif;
+				text-align: center;
+				margin-top: 50px;
+			}
+			h1 {
+				font-size: 3rem;
+			}
+		</style>
+	</head>
+	<body>
+		<h1 id="clock">00:00:00</h1>
+		<script src="js/main.js"></script>
+	</body>
 </html>
