--- a/JAVASCRIPT Dasar/Hard/Part-4/2-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-4/2-tugas/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			#daftar {
+				list-style-type: square;
+			}
+		</style>
+	</head>
+	<body>
+		<div>
+			<ul id="daftar">
+				<li>Item 1</li>
+				<li>Item 2</li>
+			</ul>
+			<input type="text" id="inputItem" placeholder="Masukkan item baru" />
+			<button id="tambahItem">Tambah Item</button>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
