--- a/JAVASCRIPT Dasar/Hard/Part-4/6-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-4/6-tugas/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			#inputText {
+				border: 2px solid gray;
+				padding: 5px;
+			}
+			#errorMessage {
+				font-size: 14px;
+				color: red;
+			}
+		</style>
+	</head>
+	<body>
+		<div>
+			<input type="text" id="inputText" placeholder="Masukkan teks di sini" />
+			<button id="submitBtn">Validasi</button>
+			<p id="errorMessage"></p>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
