--- a/JAVASCRIPT Dasar/Hard/Part-4/9-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-4/9-tugas/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			#likeBtn {
+				background-color: #007bff;
+				color: white;
+				border: none;
+				padding: 10px;
+				cursor: pointer;
+				border-radius: 5px;
+			}
+			#likeCount {
+				font-weight: bold;
+				color: green;
+			}
+		</style>
+	</head>
+	<body>
+		<div>
+			<button id="likeBtn">Like</button>
+			<p>Total Likes: <span id="likeCount">0</span></p>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
