--- a/JAVASCRIPT Dasar/Hard/Part-4/10-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-4/10-tugas/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			#colorInput {
+				padding: 5px;
+				margin-right: 10px;
+			}
+			#applyColor {
+				padding: 5px 10px;
+				background-color: #007bff;
+				color: white;
+				border: none;
+				cursor: pointer;
+				border-radius: 3px;
+			}
+		</style>
+	</head>
+	<body>
+		<div>
+			<input type="text" id="colorInput" placeholder="Masukkan warna (contoh: red)" />
+			<button id="applyColor">Terapkan Warna</button>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
