--- a/JAVASCRIPT Dasar/Hard/Part-4/11-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-4/11-tugas/index.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			#timer {
+				font-size: 30px;
+				text-align: center;
+				margin-bottom: 20px;
+			}
+			button {
+				padding: 10px;
+				margin: 5px;
+				cursor: pointer;
+			}
+			#start {
+				background-color: green;
+				color: white;
+			}
+			#stop {
+				background-color: red;
+				color: white;
+			}
+			#reset {
+				background-color: gray;
+				color: white;
+			}
+		</style>
+	</head>
+	<body>
+		<div>
+			<p id="timer">0</p>
+			<button id="start">Start</button>
+			<button id="stop">Stop</button>
+			<button id="reset">Reset</button>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
