--- a/JAVASCRIPT Dasar/Hard/Part-4/12-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-4/12-tugas/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			#todoInput {
+				padding: 5px;
+				margin-right: 10px;
+			}
+			#addTodo {
+				padding: 5px 10px;
+				background-color: #28a745;
+				color: white;
+				border: none;
+				cursor: pointer;
+				border-radius: 3px;
+			}
+			ul {
+				list-style-type: none;
+			}
+			li {
+				margin: 5px 0;
+			}
+		</style>
+	</head>
+	<body>
+		<div>
+			<input type="text" id="todoInput" placeholder="Masukkan tugas baru" />
+			<button id="addTodo">Tambah</button>
+			<ul id="todoList"></ul>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
