--- a/JAVASCRIPT Dasar/Hard/Part-4/13-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-4/13-tugas/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			#currentTime {
+				font-size: 24px;
+				text-align: center;
+				color: #007bff;
+			}
+		</style>
+	</head>
+	<body>
+		<div>
+			<p id="currentTime">jam:menit:detik</p>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
