--- a/JAVASCRIPT Dasar/Hard/Part-4/15-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-4/15-tugas/index.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			.contact-list {
+				list-style-type: none;
+				padding: 0;
+			}
+			.contact-item {
+				margin: 10px 0;
+				font-size: 16px;
+			}
+			.contact-item button {
+				margin-left: 10px;
+				cursor: pointer;
+			}
+		</style>
+	</head>
+	<body>
+		<form id="contact-form">
+			<input type="text" id="name" placeholder="Nama" required />
+			<input type="email" id="email" placeholder="Email" required />
+			<input type="tel" id="phone" placeholder="Nomor Telepon" required />
+			<button type="submit">Tambah Kontak</button>
+		</form>
+		<ul id="contact-list" class="contact-list"></ul>
+		<script src="js/main.js"></script>
+	</body>
 </html>
