--- a/JAVASCRIPT Dasar/Hard/Part-4/16-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-4/16-tugas/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			.todo-item {
+				font-size: 18px;
+				margin: 10px 0;
+			}
+			.todo-item button {
+				margin-left: 10px;
+				cursor: pointer;
+			}
+		</style>
+	</head>
+	<body>
+		<input type="text" id="task-input" placeholder="Masukkan tugas baru" />
+		<button id="add-task-btn">Tambah Tugas</button>
+		<ul id="task-list"></ul>
+		<script src="js/main.js"></script>
+	</body>
 </html>
