JS/Hard/Part-4/17-tugas

--- a/JAVASCRIPT Dasar/Hard/Part-4/17-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-4/17-tugas/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			#timer-display {
+				font-size: 30px;
+				color: red;
+				margin-top: 20px;
+			}
+			#start-timer-btn {
+				padding: 10px 20px;
+				font-size: 16px;
+				cursor: pointer;
+			}
+		</style>
+	</head>
+	<body>
+		<input type="number" id="timer-input" placeholder="Masukkan detik" />
+		<button id="start-timer-btn">Mulai Timer</button>
+		<div id="timer-display"></div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
