--- a/JAVASCRIPT Dasar/Hard/Part-4/18-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-4/18-tugas/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			#char-count {
+				font-size: 18px;
+				margin-top: 10px;
+			}
+		</style>
+	</head>
+	<body>
+		<input type="text" id="text-input" placeholder="Ketik sesuatu..." />
+		<div id="char-count">Jumlah Karakter: 0</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
