--- a/JAVASCRIPT Dasar/Hard/Part-4/21-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-4/21-tugas/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			#search-input {
+				padding: 10px;
+				font-size: 16px;
+				margin-bottom: 20px;
+			}
+			#task-list li {
+				font-size: 18px;
+				margin: 10px 0;
+			}
+		</style>
+	</head>
+	<body>
+		<input type="text" id="search-input" placeholder="Cari tugas..." />
+		<ul id="task-list">
+			<li>Tugas 1: Belajar JavaScript</li>
+			<li>Tugas 2: Membuat Kalkulator</li>
+			<li>Tugas 3: Menyelesaikan DOM</li>
+		</ul>
+		<script src="js/main.js"></script>
+	</body>
 </html>
