--- a/JAVASCRIPT Dasar/Hard/Part-4/22-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-4/22-tugas/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			.error {
+				color: red;
+				font-size: 14px;
+			}
+			#form-container input {
+				padding: 10px;
+				font-size: 16px;
+				margin-bottom: 10px;
+			}
+			#form-container button {
+				padding: 10px 20px;
+				font-size: 16px;
+				cursor: pointer;
+			}
+		</style>
+	</head>
+	<body>
+		<form id="form-container">
+			<input type="text" id="name" placeholder="Nama" />
+			<input type="email" id="email" placeholder="Email" />
+			<input type="password" id="password" placeholder="Password" />
+			<button id="submit-btn">Kirim</button>
+			<div id="error-message" class="error"></div>
+		</form>
+		<script src="js/main.js"></script>
+	</body>
 </html>
