--- a/JAVASCRIPT Dasar/Hard/Part-4/25-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-4/25-tugas/index.html
@@ -1,15 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			#cart {
+				margin-top: 20px;
+				font-size: 18px;
+			}
+			.cart-item {
+				font-size: 16px;
+				margin-bottom: 10px;
+			}
+			.cart-item span {
+				margin-left: 10px;
+			}
+			#total {
+				font-weight: bold;
+				margin-top: 10px;
+			}
+		</style>
+	</head>
+	<body>
+		<ul id="product-list">
+			<li class="product-item">
+				Laptop - $1000
+				<select class="quantity">
+					<option value="1">1</option>
+					<option value="2">2</option>
+					<option value="3">3</option>
+				</select>
+				<button class="add-to-cart">Tambah ke Keranjang</button>
+			</li>
+			<li class="product-item">
+				Kaos - $20
+				<select class="quantity">
+					<option value="1">1</option>
+					<option value="2">2</option>
+					<option value="3">3</option>
+				</select>
+				<button class="add-to-cart">Tambah ke Keranjang</button>
+			</li>
+			<li class="product-item">
+				Pisang - $2
+				<select class="quantity">
+					<option value="1">1</option>
+					<option value="2">2</option>
+					<option value="3">3</option>
+				</select>
+				<button class="add-to-cart">Tambah ke Keranjang</button>
+			</li>
+		</ul>
+		<div id="cart">
+			<h3>Keranjang Belanja:</h3>
+			<ul id="cart-items"></ul>
+			<div id="total">Total: $0</div>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
