--- a/JAVASCRIPT Dasar/Hard/Part-5/4-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-5/4-tugas/index.html
@@ -1,15 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			body {
+				font-family: 'Verdana', sans-serif;
+				background-color: #f2f2f2;
+				padding: 30px;
+			}
+			.container {
+				background-color: #fff;
+				padding: 20px;
+				max-width: 400px;
+				margin: 0 auto;
+				border-radius: 10px;
+				box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+			}
+			p {
+				font-size: 16px;
+				color: #333;
+				font-weight: bold;
+			}
+			ul {
+				list-style-type: none;
+				padding: 0;
+			}
+			li {
+				background-color: #f0f0f0;
+				padding: 8px;
+				margin: 5px 0;
+				border-radius: 4px;
+        cursor: pointer;
+			}
+			button {
+				padding: 10px;
+				background-color: #007bff;
+				color: white;
+				border: none;
+				border-radius: 4px;
+				cursor: pointer;
+			}
+			button:hover {
+				background-color: #0056b3;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="container">
+			<h2>Barang Daftar Belanja</h2>
+			<input type="text" id="itemInput" placeholder="Masukkan barang" />
+			<button id="addButton">Tambah</button>
+			<ul id="itemList"></ul>
+			<p>Total Barang: <span id="totalItems">0</span></p>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
