--- a/JAVASCRIPT Dasar/Hard/Part-5/5-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-5/5-tugas/index.html
@@ -1,15 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			body {
+				font-family: 'Roboto', sans-serif;
+				background-color: #f4f7f6;
+				padding: 20px;
+				text-align: center;
+			}
+			.container {
+				background-color: #fff;
+				padding: 30px;
+				max-width: 450px;
+				margin: 0 auto;
+				border-radius: 8px;
+				box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+			}
+			input {
+				padding: 10px;
+				margin: 10px 0;
+				width: 80%;
+				border: 1px solid #ccc;
+				border-radius: 4px;
+			}
+			ul {
+				list-style-type: none;
+				padding: 0;
+			}
+			li {
+				background-color: #e0e0e0;
+				margin: 5px 0;
+				padding: 10px;
+				border-radius: 4px;
+			}
+			li.hidden {
+				display: none;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="container">
+			<h2>Filter Barang</h2>
+			<input type="text" id="searchInput" placeholder="Cari barang..." />
+			<ul id="itemList">
+				<li>Barang 1</li>
+				<li>Barang 2</li>
+				<li>Barang 3</li>
+				<li>Barang A</li>
+				<li>Barang B</li>
+			</ul>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
