--- a/JAVASCRIPT Dasar/Hard/Part-5/7-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-5/7-tugas/index.html
@@ -8,8 +8,60 @@
   <!-- link -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
+  <style>
+  body {
+    font-family: 'Verdana', sans-serif;
+    background-color: #fafafa;
+    padding: 40px;
+  }
+  .container {
+    max-width: 600px;
+    margin: auto;
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  h2 {
+    color: #333;
+  }
+  input {
+    padding: 10px;
+    width: 80%;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    margin-bottom: 15px;
+  }
+  button {
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  button:hover {
+    background-color: #45a049;
+  }
+  ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  li {
+    background-color: #dcdcdc;
+    padding: 10px;
+    margin: 8px 0;
+    border-radius: 4px;
+  }
+</style>
 </head>
 <body>
+  <div class="container">
+  <h2>Daftar Barang Belanja</h2>
+  <input type="text" id="itemInput" placeholder="Masukkan nama barang">
+  <button id="addButton">Tambah Barang</button>
+  <ul id="itemList"></ul>
+</div>
   <script src="js/main.js"></script>
 </body>
 </html>
