--- a/JAVASCRIPT Dasar/Hard/Part-5/9-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-5/9-tugas/index.html
@@ -1,15 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			body {
+				font-family: 'Arial', sans-serif;
+				background-color: #f9f9f9;
+				padding: 30px;
+				text-align: center;
+			}
+			.container {
+				max-width: 500px;
+				margin: 0 auto;
+				padding: 20px;
+				background-color: #fff;
+				border-radius: 8px;
+				box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+			}
+			input {
+				padding: 10px;
+				margin: 10px 0;
+				width: 80%;
+				border-radius: 4px;
+				border: 1px solid #ccc;
+			}
+			button {
+				padding: 10px;
+				background-color: #4caf50;
+				color: white;
+				border: none;
+				border-radius: 4px;
+				cursor: pointer;
+			}
+			button:hover {
+				background-color: #45a049;
+			}
+			ul {
+				list-style-type: none;
+				padding: 0;
+			}
+			li {
+				background-color: #e0f7fa;
+				padding: 10px;
+				margin: 5px 0;
+				border-radius: 4px;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="container">
+			<h2>Daftar Belanja</h2>
+			<input type="text" id="itemName" placeholder="Masukkan nama barang" />
+			<input type="number" id="itemPrice" placeholder="Masukkan harga barang" />
+			<button id="addButton">Tambah Barang</button>
+			<ul id="itemList"></ul>
+			<p id="totalPrice">Total Harga: Rp0</p>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
