--- a/JAVASCRIPT Dasar/Hard/Part-5/11-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-5/11-tugas/index.html
@@ -1,15 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			body {
+				font-family: Arial, sans-serif;
+				background-color: #f2f2f2;
+				padding: 40px;
+			}
+
+			.form-container {
+				background-color: white;
+				padding: 30px;
+				width: 400px;
+				margin: 0 auto;
+				border-radius: 10px;
+				box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+			}
+
+			h2 {
+				text-align: center;
+			}
+
+			.input-field {
+				width: 100%;
+				padding: 10px;
+				margin: 10px 0;
+				border-radius: 5px;
+				border: 1px solid #ccc;
+			}
+
+			button {
+				width: 100%;
+				padding: 10px;
+				background-color: #4caf50;
+				color: white;
+				border: none;
+				border-radius: 5px;
+				cursor: pointer;
+			}
+
+			.message {
+				margin-top: 20px;
+				text-align: center;
+			}
+
+			.error {
+				color: red;
+			}
+
+			.success {
+				color: green;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="form-container">
+			<h2>Pendaftaran Pengguna</h2>
+			<form id="registration-form">
+				<input type="text" id="name" class="input-field" placeholder="Nama Lengkap" required />
+				<input type="email" id="email" class="input-field" placeholder="Email" required />
+				<input type="text" id="phone" class="input-field" placeholder="Nomor Telepon" required />
+				<button type="submit">Daftar</button>
+			</form>
+			<div id="message" class="message"></div>
+			<ul id="list-items">
+			</ul>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
